[workspace]
members = ["http-acl", "http-acl-reqwest"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nethunterslabs/http-acl"
categories = ["network-programming", "web-programming::http-client"]
keywords = ["http", "acl", "ip", "network", "ssrf"]

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
futures-util-preview = "0.2.2"
http = "1.3.1"
ipnet = "2.11.0"
matchit = "0.8.6"
reqwest = { version = "0.12.15", default-features = false }
reqwest-middleware = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
