[workspace]
members = ["http-acl", "http-acl-reqwest"]
resolver = "2"

[workspace.package]
version = "0.9.3"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nethunterslabs/http-acl"
categories = ["network-programming", "web-programming::http-client"]
keywords = ["http", "acl", "ip", "network", "ssrf"]

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
futures-util-preview = "0.2.2"
hashbrown = { version = "0.15.4", features = ["inline-more", "serde"] }
http = "1.3.1"
ipnet = "2.11.0"
matchit = "0.8.6"
reqwest = { version = "0.12.20", default-features = false }
reqwest-middleware = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
