[workspace]
members = ["http-acl", "http-acl-reqwest"]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nethunterslabs/http-acl"
categories = ["network-programming", "web-programming::http-client"]
keywords = ["http", "acl", "ip", "network", "ssrf"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
futures-util-preview = "0.2.2"
hashbrown = { version = "0.16.1", features = ["inline-more", "serde"] }
http = "1.4.0"
ipnet = "2.11.0"
matchit = "0.9.1"
reqwest = { version = "0.13.1", default-features = false }
reqwest-middleware = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"
