[package]
name = "http-acl-reqwest"
description = "An ACL middleware for reqwest."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
http-acl = { path = "../http-acl", version = "0.5.5" }
reqwest = { version = "0.11.22", default-features = false }
reqwest-middleware = "0.2.4"
task-local-extensions = "0.1.4"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
