[package]
name = "http-acl-reqwest"
description = "An ACL middleware for reqwest."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
http-acl = { path = "../http-acl", version = "0.5.7" }

anyhow = { workspace = true }
async-trait = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
task-local-extensions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
