[package]
name = "http-acl-reqwest"
description = "An ACL middleware for reqwest."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
http-acl = { path = "../http-acl", version = "0.8.1" }

anyhow = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
