[package]
name = "http-acl"
description = "An ACL for HTTP requests."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ipnet = "2.8.0"
matchit = "0.7.2"
serde = { version = "1.0.188", features = ["derive"], optional = true }
url = "2.4.1"

[features]
serde = ["dep:serde", "ipnet/serde"]

[dev-dependencies]
serde_json = "1.0"
