[package]
name = "http-acl"
description = "An ACL for HTTP requests."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ipnet = { workspace = true }
matchit = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
url = { workspace = true }

[features]
serde = ["dep:serde", "ipnet/serde"]

[dev-dependencies]
